<resources>
    <string name="app_name">ProyectoPDM2024-GT1-Grupo1-Tema1</string>
    <string name="nameHotel">Hotel Costa del Sol</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="ratings">Calificaciones</string>
    <string name="mail">Correo</string>
    <string name="password">Contraseña</string>
    <string name="enter">Ingresar</string>
    <string name="fullName">Nombre Completo</string>
    <string name="dateBirth">Fecha de Nacimiento</string>
    <string name="formatDateBirth">dd/mm/aaaa</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="ownAccount">¿Ya posee cuenta?</string>
    <string name="loginHere">Ingresa aqui</string>
    <string name="nameUser">Nombre de Usuario</string>
    <string name="repeatPassword">Repetir Contraseña</string>
    <string name="register2">Registrarme</string>
    <string name="welcome">Bienvenido</string>
    <string name="registration">Registro</string>
    <string name="bedrooms_menu">Habitaciones</string>
    <string name="hotel_menu">Hoteles</string>
    <string name="reserves_menu">Reservas</string>
    <string name="settings_menu">Configuración</string>
    <string name="hotel_title">HOTEL DE PLAYA COSTA DEL SOL</string>
    <string name="info_personal">Información personal</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="billing">Facturación</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="old_password">Contraseña antigua</string>
    <string name="repeat_password2">Repetir contraseña</string>
    <string name="save">Guardar</string>
    <string name="dui">DUI</string>
    <string name="number_digits_dui">########-#</string>
    <string name="example_mail">pdm115@ues.edu.sv</string>
    <string name="change_photo">Cambiar foto</string>
    <string name="upload">Subir</string>
    <string name="example_reservation">Reservación de habitación</string>
    <string name="example_Date">15 de abril</string>
    <string name="last_reservation">Ultimas 10 reservas</string>
    <string name="name_bedrooms">Habitación platino</string>
    <string name="star_rating_number">Calificación: 5.0</string>
    <string name="price_bedrooms">$##.##</string>
    <string name="number_bedrooms">10 habitaciones</string>
    <string name="adders_hotel">Dirección de hotel</string>
    <string name="view_bedrroms">Ver habitaciones</string>
    <string name="number_star">5.0</string>
    <string name="hotel">Hoteles</string>
    <string name="description_hotel">Descripción</string>
    <string name="description_content">Contenido de la descripción</string>
    <string name="popular_rooms">Habitaciones populares</string>
    <string name="search_here">Buscar habitación...</string>
    <string name="name_popular_rooms">Habitación doble</string>
    <string name="per_person">p/p</string>
    <string name="additional_service">Servicios adicionales</string>
    <string name="name_service">Nombre servicio</string>
    <string name="reserve">Reservar</string>
    <string name="see_everything">Ver todo</string>
    <string name="service">Servicios</string>
    <string name="total_to_pay">TOTAL A PAGAR</string>
    <string name="bedroom">Habitación ##</string>
    <string name="qualification">Calificación</string>
    <string name="qualification_description">Cuando nos califica nos ayuda a mejorar</string>
    <string name="qualification_here">Califica nuestro hotel aqui</string>
    <string name="comment">Ingresa tu calificación al hotel</string>
    <string name="qualify">Calificar</string>
    <string name="delete_comment">Borrar comentario</string>
    <string name="send">Enviar</string>
    <string name="add_by_price">Agregar por precio</string>
    <string name="cancel_service">Cancelar servicio</string>
    <string name="price">Precio</string>
    <string name="index">Inicio</string>
    <string name="name_user">Nombre de usuario</string>
    <string name="time_ranting">5 m</string>
    <string name="content_qualification">Contenido de la calificación</string>
    <string name="example_qualification">Califiación: 5.0 pts</string>

</resources>