<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="@color/contenedor_azul"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="10dp"
    app:contentPaddingLeft="40dp"
    app:contentPaddingRight="40dp"
    android:id="@+id/cardview_calificaciones_usuarios">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/txt_nombre_usuario_calificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_user"
            android:textSize="12sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gris_subtitulo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            />

        <TextView
            android:id="@+id/txt_tiempo_realizada_calificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_ranting"
            android:textSize="12sp"
            android:fontFamily="@font/roboto"
            android:textColor="@color/gris_subtitulo"
            app:layout_constraintStart_toEndOf="@+id/txt_nombre_usuario_calificaciones"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.05"/>

        <TextView
            android:id="@+id/txt_contenido_calificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:text="@string/content_qualification"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombre_usuario_calificaciones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txt_calificacion_usuario_calificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto"
            android:text="@string/example_qualification"
            app:layout_constraintTop_toBottomOf="@+id/txt_contenido_calificaciones"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>