<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_fondo"
    tools:context=".RegistroParteDos">

    <!--Componente del texto registro-->
    <TextView
        android:id="@+id/txt_registro_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/roboto"
        android:text="@string/registration"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Componente del texto Nombre de Usuario-->
    <TextView
        android:id="@+id/txt_nombre_usuario_parte2"
        android:layout_width="123dp"
        android:layout_height="20dp"
        android:fontFamily="@font/roboto"
        android:text="@string/nameUser"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_nombre_usuario_parte2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <!--Componente de la caja de texto para nombre de usuario-->
    <EditText
        android:id="@+id/edtxt_nombre_usuario_parte2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:width="311dp"
        android:background="@drawable/entrada_personalizada"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/nameUser"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/verde_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_registro_parte2" />

    <!--Componente del texto Contraseña-->
    <TextView
        android:id="@+id/txt_contrasenia_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_contrasenia_parte2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.954" />

    <!--Componente de la caja de texto para la contraseña-->
    <EditText
        android:id="@+id/edtxt_contrasenia_parte2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:width="311dp"
        android:background="@drawable/entrada_personalizada"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/verde_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_nombre_usuario_parte2" />

    <!--Componente del texto Repetir Contraseña-->
    <TextView
        android:id="@+id/txt_repetir_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/repeatPassword"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edtxt_repetir_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.182"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <!--Componente de la caja de texto para introducir la repetición de la contraseña-->
    <EditText
        android:id="@+id/edtxt_repetir_contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:width="311dp"
        android:background="@drawable/entrada_personalizada"
        android:ems="10"
        android:fontFamily="@font/roboto"
        android:hint="@string/repeatPassword"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="@color/verde_hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_contrasenia_parte2" />

    <!--Componente del boton anterior-->
    <Button
        android:id="@+id/btn_anterior_registro_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150.5dp"
        android:backgroundTint="@color/black"
        android:text="@string/previous"
        app:icon="@drawable/flecha_izquierda"
        app:iconGravity="textStart"
        app:iconPadding="6dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_repetir_contrasenia"
        app:layout_constraintVertical_bias="0.15" />

    <!--Componente del boton registrarme-->
    <Button
        android:id="@+id/btn_registrarme_registro_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150.5dp"
        android:backgroundTint="#E1B154"
        android:text="@string/register2"
        android:textSize="14sp"
        app:icon="@drawable/flecha_derecha"
        app:iconGravity="textEnd"
        app:iconPadding="0.5dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/btn_anterior_registro_parte2"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_repetir_contrasenia"
        app:layout_constraintVertical_bias="0.15" />

    <!--Componente del texto ¿Ya posee cuenta? -->
    <TextView
        android:id="@+id/txt_poseo_cuenta_registro_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ownAccount"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_registrarme_registro_parte2"
        app:layout_constraintVertical_bias="0.221" />
    <!--Componente del texto Ingresa aqui-->
    <TextView
        android:id="@+id/txt_ingresa_aqui_registro_parte2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginHere"
        android:textColor="@color/verde_link"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toEndOf="@+id/txt_poseo_cuenta"
        app:layout_constraintTop_toBottomOf="@id/btn_registrarme_registro_parte2"
        app:layout_constraintVertical_bias="0.221" />

</androidx.constraintlayout.widget.ConstraintLayout>