<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco_fondo"
    tools:context=".MainActivity">

    <!--Imagen de la playa de activity main-->
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/fondoplaya"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/radius"
        android:elevation="10dp"/>

    <!--Componente del texto o titulo hotel costa del sol-->
    <TextView
        android:id="@+id/txtNombreHotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/nameHotel"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449" />

    <!--Componente del boton Iniciar Sesión-->
    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="311dp"
        android:height="44dp"
        android:backgroundTint="@color/amarillo"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:icon="@drawable/flecha_derecha"
        app:iconGravity="textEnd"
        app:iconPadding="6dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <!--Componente del boton Registrarse-->
    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="311dp"
        android:height="44dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/roboto"
        android:text="@string/register"
        android:textStyle="bold"
        app:cornerRadius="24dp"
        app:icon="@drawable/icon_mas"
        app:iconGravity="textEnd"
        app:iconPadding="6dp"
        app:iconSize="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarSesion"
        app:layout_constraintVertical_bias="0.051" />

    <!--Componente TextView del texto Calificaciones-->
    <TextView
        android:id="@+id/txtCalificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratings"
        android:textColor="@color/verde_link"
        android:textSize="14sp"
        android:textStyle="bold"
        app:circularflow_defaultRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.703" />

</androidx.constraintlayout.widget.ConstraintLayout>